// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component Seed - test Seed Backup - snapshot 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "marginTop": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderColor": "#c3c3c3",
          "borderRadius": 30,
          "borderWidth": 0.2,
          "height": 48,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "marginTop": 5,
          "opacity": 1,
          "width": 48,
        }
      }
    >
      <
        color="#c3c3c3"
        icon={
          {
            "icon": [
              320,
              512,
              [
                9001,
              ],
              "f053",
              "M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z",
            ],
            "iconName": "chevron-left",
            "prefix": "fas",
          }
        }
        size={22}
      />
    </View>
    <Text
      style={
        [
          {
            "flex": 1,
            "fontSize": 22,
            "fontWeight": "600",
            "textAlign": "center",
          },
          {
            "color": "#c3c3c3",
          },
        ]
      }
    >
      Seed phrase
    </Text>
    <View
      style={
        {
          "width": 32,
        }
      }
    />
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "paddingBottom": NaN,
        "paddingHorizontal": 10,
      }
    }
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#c3c3c3",
              "fontSize": 17,
              "opacity": 0.65,
              "padding": 10,
              "textAlign": "center",
            }
          }
        >
          Your seed phrase is the key to your wallet. Back it up so you can restore your wallet if you lose or damage your device 
        </Text>
        <View
          style={
            {
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "30%",
                  "paddingHorizontal": 15,
                  "paddingVertical": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                1
                .
              </Text>
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={false}
                keyboardType="default"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 15,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="pepe"
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "30%",
                  "paddingHorizontal": 15,
                  "paddingVertical": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                2
                .
              </Text>
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={false}
                keyboardType="default"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 15,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="lolo"
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "30%",
                  "paddingHorizontal": 15,
                  "paddingVertical": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                3
                .
              </Text>
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={false}
                keyboardType="default"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 15,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="titi"
              />
            </View>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "flex-end",
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 30,
                  "justifyContent": "center",
                  "padding": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#18bd18",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "opacity": 1,
                    "textDecorationLine": "underline",
                    "textDecorationStyle": "solid",
                  }
                }
              >
                Copy
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": undefined,
              "borderColor": "#ffffff",
              "borderRadius": 25,
              "borderWidth": 1,
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
              "maxWidth": 520,
              "minHeight": 48,
              "minWidth": "50%",
              "paddingHorizontal": 25,
              "paddingVertical": 15,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 20,
                "opacity": 0.65,
              }
            }
          >
            Birthday
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "opacity": 1,
                  "textAlign": "center",
                }
              }
            >
              1900100
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Component Seed - test Seed Change - snapshot 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "marginTop": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderColor": "#c3c3c3",
          "borderRadius": 30,
          "borderWidth": 0.2,
          "height": 48,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "marginTop": 5,
          "opacity": 1,
          "width": 48,
        }
      }
    >
      <
        color="#c3c3c3"
        icon={
          {
            "icon": [
              320,
              512,
              [
                9001,
              ],
              "f053",
              "M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z",
            ],
            "iconName": "chevron-left",
            "prefix": "fas",
          }
        }
        size={22}
      />
    </View>
    <Text
      style={
        [
          {
            "flex": 1,
            "fontSize": 22,
            "fontWeight": "600",
            "textAlign": "center",
          },
          {
            "color": "#c3c3c3",
          },
        ]
      }
    >
      Seed phrase
    </Text>
    <View
      style={
        {
          "width": 32,
        }
      }
    />
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "paddingBottom": NaN,
        "paddingHorizontal": 10,
      }
    }
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#c3c3c3",
              "fontSize": 17,
              "opacity": 0.65,
              "padding": 10,
              "textAlign": "center",
            }
          }
        >
          Your seed phrase is the key to your wallet. Back it up so you can restore your wallet if you lose or damage your device 
        </Text>
        <View
          style={
            {
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "30%",
                  "paddingHorizontal": 15,
                  "paddingVertical": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                1
                .
              </Text>
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={false}
                keyboardType="default"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 15,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="pepe"
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "30%",
                  "paddingHorizontal": 15,
                  "paddingVertical": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                2
                .
              </Text>
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={false}
                keyboardType="default"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 15,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="lolo"
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "30%",
                  "paddingHorizontal": 15,
                  "paddingVertical": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                3
                .
              </Text>
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={false}
                keyboardType="default"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 15,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="titi"
              />
            </View>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "flex-end",
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 30,
                  "justifyContent": "center",
                  "padding": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#18bd18",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "opacity": 1,
                    "textDecorationLine": "underline",
                    "textDecorationStyle": "solid",
                  }
                }
              >
                Copy
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": undefined,
              "borderColor": "#ffffff",
              "borderRadius": 25,
              "borderWidth": 1,
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
              "maxWidth": 520,
              "minHeight": 48,
              "minWidth": "50%",
              "paddingHorizontal": 25,
              "paddingVertical": 15,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 20,
                "opacity": 0.65,
              }
            }
          >
            Birthday
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "opacity": 1,
                  "textAlign": "center",
                }
              }
            >
              1900100
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Component Seed - test Seed New - snapshot 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View />
  <View
    style={
      {
        "backgroundColor": "#011401",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#011401",
            "display": "flex",
            "minHeight": 25,
            "paddingBottom": 0,
            "paddingTop": 10,
          }
        }
        testID="header"
      >
        <View
          style={
            {
              "borderRadius": 3,
              "display": "flex",
              "height": 5,
              "justifyContent": "flex-start",
              "marginTop": 10,
              "width": "30%",
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "center",
              "marginHorizontal": 5,
              "marginTop": 0,
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "center",
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexWrap": "wrap",
                "justifyContent": "center",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": undefined,
                    "borderRadius": 35,
                    "margin": 10,
                    "padding": 20,
                  }
                }
              >
                <
                  color="#c3c3c3"
                  icon={
                    {
                      "icon": [
                        384,
                        512,
                        [
                          8593,
                        ],
                        "f062",
                        "M214.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 109.3 160 480c0 17.7 14.3 32 32 32s32-14.3 32-32l0-370.7 105.4 105.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z",
                      ],
                      "iconName": "arrow-up",
                      "prefix": "fas",
                    }
                  }
                  size={30}
                  style={
                    {
                      "transform": [
                        {
                          "rotate": "45deg",
                        },
                      ],
                    }
                  }
                />
              </View>
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                Send
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexWrap": "wrap",
                "justifyContent": "center",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": undefined,
                    "borderRadius": 35,
                    "margin": 10,
                    "padding": 20,
                  }
                }
              >
                <
                  color="#c3c3c3"
                  icon={
                    {
                      "icon": [
                        384,
                        512,
                        [
                          8595,
                        ],
                        "f063",
                        "M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7-105.4-105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z",
                      ],
                      "iconName": "arrow-down",
                      "prefix": "fas",
                    }
                  }
                  size={30}
                  style={
                    {
                      "transform": [
                        {
                          "rotate": "45deg",
                        },
                      ],
                    }
                  }
                />
              </View>
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                Receive
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexWrap": "wrap",
                "justifyContent": "center",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": undefined,
                    "borderRadius": 35,
                    "margin": 10,
                    "padding": 20,
                  }
                }
              >
                <
                  color="#c3c3c3"
                  icon={
                    {
                      "icon": [
                        512,
                        512,
                        [],
                        "e005",
                        "M192 64c0-17.7 14.3-32 32-32s32 14.3 32 32l96 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-96 0 0 64 18.7 0c8.5 0 16.6 3.4 22.6 9.4l22.6 22.6 32 0c88.4 0 160 71.6 160 160 0 17.7-14.3 32-32 32l-64 0c-17.7 0-32-14.3-32-32s-14.3-32-32-32l-36.1 0c-20.2 29-53.9 48-91.9 48s-71.7-19-91.9-48L32 352c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l96 0 22.6-22.6c6-6 14.1-9.4 22.6-9.4l18.7 0 0-64-96 0c-17.7 0-32-14.3-32-32S78.3 64 96 64l96 0z",
                      ],
                      "iconName": "faucet",
                      "prefix": "fas",
                    }
                  }
                  size={30}
                />
              </View>
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                Faucet
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "left": 0,
              "padding": 11.5,
              "position": "absolute",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 40,
              }
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "padding": 13,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "marginRight": 5,
              "opacity": 1,
            }
          }
          testID="header.drawmenu"
        >
          <View
            color="#ffffff"
            height={35}
            width={35}
          />
        </View>
      </View>
    </View>
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "justifyContent": "flex-start",
        }
      }
      keyboardShouldPersistTaps="handled"
      style={
        {
          "height": "80%",
          "maxHeight": "80%",
        }
      }
    >
      <View>
        <Text
          style={
            {
              "color": "#c3c3c3",
              "fontSize": 18,
              "fontWeight": "900",
              "marginTop": 0,
              "opacity": 1,
              "padding": 20,
              "textAlign": "center",
            }
          }
        >
          text translated
        </Text>
        <View
          style={
            {
              "borderColor": "#c3c3c3",
              "borderRadius": 10,
              "borderWidth": 1,
              "margin": 10,
              "maxHeight": "45%",
              "padding": 10,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "opacity": 1,
                  "textAlign": "center",
                }
              }
            >
              pepe lolo titi
            </Text>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View />
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "marginTop": 0,
                    "minHeight": 48,
                    "padding": 10,
                    "textAlign": "center",
                    "textDecorationLine": "underline",
                  }
                }
              >
                text translated
              </Text>
            </View>
            <View />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "marginTop": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "opacity": 0.65,
                "textAlign": "center",
              }
            }
          >
            text translated
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "opacity": 1,
                  "textAlign": "center",
                }
              }
            >
              1900100
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "marginBottom": 30,
            }
          }
        />
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
          "justifyContent": "center",
          "marginVertical": 5,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#18bd18",
            "borderRadius": 25,
            "borderWidth": 1,
            "justifyContent": "center",
            "maxWidth": "90%",
            "minHeight": 48,
            "minWidth": "30%",
            "opacity": 1,
            "padding": 0,
            "paddingLeft": 20,
            "paddingRight": 20,
            "width": "80%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 0,
              "minHeight": 48,
              "minWidth": 48,
              "padding": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "fontSize": 18,
                "fontWeight": "normal",
                "textAlign": "center",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component Seed - test Seed Server - snapshot 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "marginTop": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderColor": "#c3c3c3",
          "borderRadius": 30,
          "borderWidth": 0.2,
          "height": 48,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "marginTop": 5,
          "opacity": 1,
          "width": 48,
        }
      }
    >
      <
        color="#c3c3c3"
        icon={
          {
            "icon": [
              320,
              512,
              [
                9001,
              ],
              "f053",
              "M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z",
            ],
            "iconName": "chevron-left",
            "prefix": "fas",
          }
        }
        size={22}
      />
    </View>
    <Text
      style={
        [
          {
            "flex": 1,
            "fontSize": 22,
            "fontWeight": "600",
            "textAlign": "center",
          },
          {
            "color": "#c3c3c3",
          },
        ]
      }
    >
      Seed phrase
    </Text>
    <View
      style={
        {
          "width": 32,
        }
      }
    />
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "paddingBottom": NaN,
        "paddingHorizontal": 10,
      }
    }
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#c3c3c3",
              "fontSize": 17,
              "opacity": 0.65,
              "padding": 10,
              "textAlign": "center",
            }
          }
        >
          Your seed phrase is the key to your wallet. Back it up so you can restore your wallet if you lose or damage your device 
        </Text>
        <View
          style={
            {
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "30%",
                  "paddingHorizontal": 15,
                  "paddingVertical": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                1
                .
              </Text>
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={false}
                keyboardType="default"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 15,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="pepe"
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "30%",
                  "paddingHorizontal": 15,
                  "paddingVertical": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                2
                .
              </Text>
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={false}
                keyboardType="default"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 15,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="lolo"
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "30%",
                  "paddingHorizontal": 15,
                  "paddingVertical": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                3
                .
              </Text>
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={false}
                keyboardType="default"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 15,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="titi"
              />
            </View>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "flex-end",
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 30,
                  "justifyContent": "center",
                  "padding": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#18bd18",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "opacity": 1,
                    "textDecorationLine": "underline",
                    "textDecorationStyle": "solid",
                  }
                }
              >
                Copy
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": undefined,
              "borderColor": "#ffffff",
              "borderRadius": 25,
              "borderWidth": 1,
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
              "maxWidth": 520,
              "minHeight": 48,
              "minWidth": "50%",
              "paddingHorizontal": 25,
              "paddingVertical": 15,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 20,
                "opacity": 0.65,
              }
            }
          >
            Birthday
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "opacity": 1,
                  "textAlign": "center",
                }
              }
            >
              1900100
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Component Seed - test Seed View - snapshot 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "marginTop": 10,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderColor": "#c3c3c3",
          "borderRadius": 30,
          "borderWidth": 0.2,
          "height": 48,
          "justifyContent": "center",
          "marginHorizontal": 5,
          "marginTop": 5,
          "opacity": 1,
          "width": 48,
        }
      }
    >
      <
        color="#c3c3c3"
        icon={
          {
            "icon": [
              320,
              512,
              [
                9001,
              ],
              "f053",
              "M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z",
            ],
            "iconName": "chevron-left",
            "prefix": "fas",
          }
        }
        size={22}
      />
    </View>
    <Text
      style={
        [
          {
            "flex": 1,
            "fontSize": 22,
            "fontWeight": "600",
            "textAlign": "center",
          },
          {
            "color": "#c3c3c3",
          },
        ]
      }
    >
      Seed phrase
    </Text>
    <View
      style={
        {
          "width": 32,
        }
      }
    />
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "paddingBottom": NaN,
        "paddingHorizontal": 10,
      }
    }
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexGrow": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#c3c3c3",
              "fontSize": 17,
              "opacity": 0.65,
              "padding": 10,
              "textAlign": "center",
            }
          }
        >
          Your seed phrase is the key to your wallet. Back it up so you can restore your wallet if you lose or damage your device 
        </Text>
        <View
          style={
            {
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "30%",
                  "paddingHorizontal": 15,
                  "paddingVertical": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                1
                .
              </Text>
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={false}
                keyboardType="default"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 15,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="pepe"
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "30%",
                  "paddingHorizontal": 15,
                  "paddingVertical": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                2
                .
              </Text>
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={false}
                keyboardType="default"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 15,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="lolo"
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": undefined,
                  "borderColor": "#ffffff",
                  "borderRadius": 25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "maxWidth": 520,
                  "minHeight": 48,
                  "minWidth": "30%",
                  "paddingHorizontal": 15,
                  "paddingVertical": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#c3c3c3",
                    "opacity": 0.65,
                  }
                }
              >
                3
                .
              </Text>
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                editable={false}
                keyboardType="default"
                returnKeyType="done"
                style={
                  {
                    "backgroundColor": "transparent",
                    "color": "#c3c3c3",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 15,
                    "fontWeight": "600",
                    "marginLeft": 5,
                    "minHeight": 48,
                  }
                }
                value="titi"
              />
            </View>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 8,
              }
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "flex-end",
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 30,
                  "justifyContent": "center",
                  "padding": 0,
                  "width": "30%",
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#18bd18",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "opacity": 1,
                    "textDecorationLine": "underline",
                    "textDecorationStyle": "solid",
                  }
                }
              >
                Copy
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": undefined,
              "borderColor": "#ffffff",
              "borderRadius": 25,
              "borderWidth": 1,
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
              "maxWidth": 520,
              "minHeight": 48,
              "minWidth": "50%",
              "paddingHorizontal": 25,
              "paddingVertical": 15,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "flexGrow": 1,
                "flexShrink": 1,
                "fontSize": 20,
                "opacity": 0.65,
              }
            }
          >
            Birthday
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 18,
                  "fontWeight": "600",
                  "opacity": 1,
                  "textAlign": "center",
                }
              }
            >
              1900100
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
